fixed issues with spacing on multiple pages that was causing overflow

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -6,7 +6,7 @@
     z-index: 99;
     padding: 0 20px;
     min-height: 50px;
-    width: 100vw;
+    width: 100%;
     color: white;
     font-size: 1.1em;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.693), rgba(0, 0, 0, 0.256));
