--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -17,10 +17,10 @@
 -----------------------------------------*/
 .spotlight-div {
     display: grid;
-    grid-template-columns: 70% 30%;
+    grid-template-columns: 7fr 3fr;
     grid-template-rows: 1fr;
     gap: 5px;
-    width: 100vw;
+    width: 100%;
     height: clamp(400px,60vh,500px);
     background-color: white;
 }
