--- a/src/pages/WatchListPage/WatchListPage.css
+++ b/src/pages/WatchListPage/WatchListPage.css
@@ -10,31 +10,31 @@ WatchList
 .watchlist-wrapper {
     display: flex;
     flex-direction: column;
+    align-items: center;
     margin: 0 auto;
-    width: 80vw;
     min-height: 400px;
-
 }
 
 .watchlist-page-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: min(90vw, 1000px);
 }
 
 .watchlist-div {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* padding: 30px 20px; */
     min-height: 400px;
+    width: 100%;
 }
 
 .watchlist-list {
     position: relative;
     margin: 10px;
     padding: 10px 30px;
-    width: 100vw;
+    width: 100%;
     min-height: 225px;
     border: 1px solid grey;
     transition: 250ms ease-in;
